--- a/title.tex
+++ b/title.tex
@@ -36,15 +36,20 @@ Faculty of Nuclear Sciences and Physical Engineering\\
 
 \bgroup \def\arraystretch{1.5}
 \noindent\begin{tabular}{p{.25\linewidth}p{.7\linewidth}}
-Autor:					&\textbf{Ing. Filip Dominec} \\
-					~	&České vysoké učení technické v Praze\\
-					~	&Fakulta jaderná a fyzikálně inženýrská\\ 
+	Autor:				&\textbf{Ing. Filip Dominec} \\ 
+					~	&České vysoké učení technické v Praze\\ 
+					~	&Fakulta jaderná a fyzikálně inženýrská\\  
 					~	&Katedra fyzikální elektroniky\\
 Název práce:			&\textbf{Metamateriály pro terahertzovou spektrální oblast} \\
 Studijní program:		&\textbf{Aplikace přírodních věd} \\
 Studijní obor:			&\textbf{Fyzikální inženýrství} \\
 Školitel:				&\textbf{Mgr. Filip Kadlec, Dr.} \\
+					~	&Fyzikální ústav\\ 
+					~	&Akademie věd České republiky\\  %Na Slovance 2,  182 21 Praha 8, Czech Republic 
 Školitel specialista:	&\textbf{Doc. Ing. Ivan Richter, Dr.} \\
+					~	&České vysoké učení technické v Praze\\ 
+					~	&Fakulta jaderná a fyzikálně inženýrská\\  
+					~	&Katedra fyzikální elektroniky\\
 Akademický rok:			&\textbf{2015/16} \\			%% TODO is this the correct format?
 Počet stran:			&\textbf{\pageref{enddocument}} \\  %% TODO shall give the overall page number or just that of the authored text?
 Klíčová slova			&\textbf{metamateriály, fotonické krystaly, terahertzová technologie, elektrodynamické simulace, homogenizace efektivních prostředí} \\
@@ -65,7 +70,12 @@ Title of Dissertation:	&\textbf{Metamaterials for the terahertz spectral range} 
 Degree Programme:		&\textbf{Application of natural sciences} \\
 Field of Study:			&\textbf{Physical engineering} \\
 Supervisor:				&\textbf{Mgr. Filip Kadlec, Dr.} \\
+					~	&Institute of Physics\\ 
+					~	&Academy of Sciences of the Czech Republic\\  %Na Slovance 2,  182 21 Praha 8, Czech Republic 
 Supervisor specialist:	&\textbf{Doc. Ing. Ivan Richter, Dr.} \\
+					~	&České vysoké učení technické v Praze\\ 
+					~	&Fakulta jaderná a fyzikálně inženýrská\\  
+					~	&Katedra fyzikální elektroniky\\
 Academic Year:			&\textbf{2015/16} \\
 Number of Pages:		&\textbf{\pageref{enddocument}} \\
 Keywords				&\textbf{metamaterials, photonic crystals, terahertz technology, computational electrodynamics, homogenization of effective media} \\
@@ -89,7 +99,7 @@ Teoretický základ práce vychází z elektrodynamiky prostředí s klasickou f
 
 Obecná teorie je doplněna příklady terahertzového chování různorodých periodických struktur, které bylo vypočteno metodou konečných diferencí v časové doméně (FDTD). V některých případech byly její výsledky podloženy jinými simulačními algoritmy nebo měřeními pomocí terahertzové spektroskopie v časové doméně.
 
-Srovnání  různých struktur si klade za cíl srozumitelnou formou ukázat a okomentovat nejpodstatnější principy. Podobné srovnání zřejmě v dosavadní literatuře chybělo. Dalším cílem předložených výsledků je doložit schopnosti prostředí pro simulace, které autor vyvinul a uveřejnil na internetu s úmyslem motivovat další výzkum v této oblasti. 
+Srovnání  různých struktur si klade za cíl srozumitelnou formou předložit a vysvětlit nejpodstatnější principy. Podobné srovnání zřejmě v dosavadní literatuře chybělo. Klíčové výsledky spočívají v popisu přechodu mezi režimy metamateriálu a fotonického krystalu v periodickém poli dielektrických tyčinek a v dokladu toho, že k popisu chování řady uvedených struktur je zcela nezbytné uvažovat prostorovou dispersi. V neposlední řadě práce ukazuje možnosti simulačních skriptů, které autor vyvinul a uveřejnil na internetu s úmyslem podpořit další výzkum v této oblasti. 
 
 \vspace{0mm}
 %\chapter*{Abstract} 
@@ -101,8 +111,9 @@ The theoretical background is derived from the electrodynamics of media with cla
 
 The general theory is complemented with examples of the behaviour of diverse periodic structures in the terahertz range, which was numerically simulated by the finite-difference time-domain method. In some cases, the results of this simulation method were supported by other simulation algorithms or by the experimental measurement by the terahertz time-domain spectroscopy. 
 
-The comparison of different structures encompassed in this thesis attempts to present and comment most relevant principles in a didactic way. Arguably, such a comparison was missing in the previous literature.
-Another objective of the presented results is to demonstrate the capabilities of the simulation environment, which the author developed and completely published online to stimulate further research in this field. 
+The comparison of different structures encompassed in this thesis attempts to present and explain most relevant principles in a didactic way. Arguably, such a comparison was missing in the previous literature.
+The key results are in the description of the transition between metamaterial and photonic crystal regimes in a periodic array of dielectric rods, and in the demonstration of the fact that considering spatial dispersion is essential for the description of the behaviour of many periodic structures.
+Last but not least, the thesis demonstrates the capabilities of the simulation environment which the author developed and completely published online to stimulate further research in this field. 
 
 % TODO Z abstraktu musí být zřejmé, co je cílem předložené práce a jakých vědeckých výsledků doktorand osobně dosáhl.
 %% + attention was focused to the parts of different topics, where the author's work could contribute with new knowledge
